--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,38 @@
-logging.level.org.springframework=debug
+#logging.level.org.springframework=debug
 ## Spring view resolver set up
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix=.jsp
+
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.thymeleaf=DEBUG
+
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#
+
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url = jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-spring.datasource.username = sa
-spring.datasource.password = root
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url = jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+#spring.datasource.username = sa
+#spring.datasource.password = root
 #Enabling H2 Console
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 #Custom H2 Console URL
-spring.h2.console.path=/h2
-spring.h2.console.settings.web-allow-others=true
+#spring.h2.console.path=/h2
+#spring.h2.console.settings.web-allow-others=true
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+
+spring.datasource.url=jdbc:mysql://localhost/medical
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
